// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widget-space redux reducer should handle FETCHING_SPACE_DETAILS 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": true,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should handle RELOAD_WIDGET 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should handle STORE_ACTIVITY_TYPES 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [
    "a",
    "b",
    "c",
  ],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should handle STORE_DESTINATION 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": Immutable.Record {
    "id": "abc@123.net",
    "type": "EMAIL",
  },
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should handle STORE_SPACE_DETAILS 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": Immutable.Map {},
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should handle TOGGLE_ACTIVITY_MENU_VISIBLE 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": true,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should handle UPDATE_ACTIVITY_MENU_VISIBLE 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
  "activityMenuVisible": true,
}
`;

exports[`widget-space redux reducer should handle UPDATE_ACTIVITY_TYPE 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": "MEET",
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should handle UPDATE_ACTIVITY_TYPE_SECONDARY 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": "ROSTER",
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should handle UPDATE_WIDGET_STATUS 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;

exports[`widget-space redux reducer should return initial state 1`] = `
Immutable.Map {
  "activityTypes": Immutable.List [],
  "destination": null,
  "error": null,
  "primaryActivityType": null,
  "secondaryActivityType": null,
  "spaceDetails": null,
  "status": Immutable.Record {
    "activityMenuVisible": false,
    "hasError": false,
    "hasFetchedFeatureFlags": false,
    "isFetchingFeatureFlags": false,
    "isFetchingSpaceDetails": false,
    "shouldReloadWidget": false,
  },
}
`;
